--- a/index.html
+++ b/index.html
@@ -37,12 +37,7 @@
       </div>
       <br>
       <div class="w3-container w3-center w3-small" id="footer">
-        <p>&copy; 2017 <a href="index.html" class="w3-hover-none w3-text-black w3-hover-text-cyan">Stefan Kramel</a><br>
-        <a href="http://www.wesleyan.edu/physics/" class="w3-hover-none w3-text-black w3-hover-text-cyan">Department of Physics</a><br>
-        Wesleyan University<br>
-        265 Church Street, Exley Science Center, Office #239<br>
-        Middletown, CT 06459<br>
-        <a href="mailto:swkramel@gmail.com" target="_blank" class="w3-hover-none w3-text-black w3-hover-text-cyan">swkramel@gmail.com</a>, <a href="https://www.linkedin.com/in/swkramel"><i class="fa fa-linkedin w3-hover-text-cyan"></i></a>, +1(860)538-0082<br>
+        <p>&copy; 2017 <a href="mailto:swkramel@gmail.com" target="_blank" class="w3-hover-none w3-text-black w3-hover-text-cyan">swkramel@gmail.com</a>, <a href="https://www.linkedin.com/in/swkramel"><i class="fa fa-linkedin w3-hover-text-cyan"></i></a>, +1(860)538-0082<br>
         </p>
     </div>
   
