--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <br>
       <div class="w3-container w3-center w3-small" id="footer">
-        <p>&copy; 2017 <a href="mailto:swkramel@gmail.com" target="_blank" class="w3-hover-none w3-text-black w3-hover-text-cyan">swkramel@gmail.com</a>, <a href="https://www.linkedin.com/in/swkramel"><i class="fa fa-linkedin w3-hover-text-cyan"></i></a>, +1(860)538-0082<br>
+        <p>&copy; 2017 <a href="mailto:swkramel@gmail.com" target="_blank" class="w3-hover-none w3-text-black w3-hover-text-cyan">swkramel@gmail.com</a>
         </p>
     </div>
   
