--- a/envy.html
+++ b/envy.html
@@ -21,8 +21,8 @@
 
       <div class="w3-container w3-center w3-small" id="intro">
       	<p>
-          A deep neural vision library and image data base<br>
-          Combining OpenCV and Tensorflow<br>
+          A deep neural vision library<br>
+          combining OpenCV and Tensorflow<br>
           <br>
           <img src="/img/OpenCV_tensorflow_logo.jpg" alt="OpenCV_logo" style="width:20%"><br>
           <br>
